[tool.poetry]
name = "THE KRU BOT"
version = "0.1.0"
description = "I'm here to help"
authors = ["Faze-Kara <fazekaraplays.tv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
"discord.py" = "^1.3.3"
DavesLogger = "^1.1.0"
asyncio = "^3.4.3"
aiohttp = "^3.6.2"
requests = "^2.23.0"
motor = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[tool.poetry.scripts]
start = "KRU BOT.main:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
